fix(*): Stream 过滤方法使用